2014-12-11  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Report heritability estimation in family-based models
	* Add variable threshold test using analytical approach
	* Add family-based tests: famCMC, famZeggini and famSKAT
	* Add Firth regression
	* Fix bugs in famLRT

2014-10-11  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Clean codes
	* Upgrade PCRE to version 8.36

2014-10-06  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix allele frequency calculation in related samples

2014-07-29  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Change AF = 0 to NA when the sites are all missing

2014-07-23  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Update U, V statistics for unrelated individual such that SE(effect_size) = 1/sqrt(V)
	* Improve vcf2kinship error messages

2014-06-20  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix effect estimation in linear score test when covariates exists

2014-06-13  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix trait summary in the MetaScore file header
	* Improve model stability in MetaCov model

2014-04-17  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix "--meta score" model outputs again... This time the results have been verified by Merlin

2014-04-16  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix "--meta score" model outputs on X chromosome hemizygous region
	* Add header in "--meta score" model outputs

2014-04-01  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* New parallele computation option (--thread) in vcf2kinship

2014-03-30  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve: allele frequency calculation is faster

	* Improve: faster calculation of covariance in "--meta" models

2014-03-26  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve: for "--meta recessive" model, output PVALUE = NA instead of 1 at monomorphic sites